[tool.poetry]
name = "finalproject_sargsyan_narek_m25_555"
version = "0.1.0"
description = "Платформа для отслеживания и симуляции торговли валютами"
authors = ["Narek Sargsyan"]
readme = "README.md"
packages = [{ include = "valutatrade_hub" }]

[tool.poetry.dependencies]
python = "^3.10"
prettytable = "^3.5.0"
toml = "^0.10.2"
requests = "^2.31.0"
apscheduler = "^3.10.4"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.14.3,<0.15.0"

[tool.poetry.scripts]
project = "main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "C", "Q"]
ignore = ["E203", "F811"]

[tool.valutatrade]
data_dir = "data"
rates_ttl_seconds = 300
default_base_currency = "USD"
log_dir = "logs"
log_format = "text"
max_log_size_mb = 10
backup_count = 5
debug = false

[tool.valutatrade.parser]
exchangerate_api_key = "961582df974f6f72a83241b7961582df974f6f72a83241b7"
coingecko_url = "https://api.coingecko.com/api/v3/simple/price"
exchangerate_api_url = "https://v6.exchangerate-api.com/v6"
base_currency = "USD"
request_timeout = 10
update_interval_minutes = 5
fiat_currencies = ["EUR", "GBP", "RUB", "JPY", "CNY", "CHF", "CAD", "AUD"]
crypto_currencies = ["BTC", "ETH", "SOL", "BNB", "XRP", "ADA", "DOGE", "DOT"]